--- a/adopet/templates/home.html
+++ b/adopet/templates/home.html
@@ -42,6 +42,10 @@
                     <p style="color: #fff;">
                         This is a portfolio project for <a href="https://www.holbertonschool.com/">Holberton School</a> & <a href="https://tech.alxafrica.com/egypt?utm_source=google&utm_medium=pmax&utm_campaign=egc_2024q1&utm_term=tofu-applications-tech-lite-eg&utm_content=all&gad_source=1&gclid=Cj0KCQiAw6yuBhDrARIsACf94RWVjOSyn08HkeBJr6XA6fggivm6UBrlyVZR4fla0E705XfsHzL08YMaAjSQEALw_wcB">ALX</a>
                     </p>
+                    <div>
+                        <a href="https://github.com/Abdelwahab-Hamada/adopet"><i class="fa fa-github" style="color: #fff" aria-hidden="true"></i></a>
+                        <span>Project Repo</span>
+                    </div>
                     <a href="https://www.linkedin.com/in/abdelwahab-hamada/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                     <a href="https://github.com/Abdelwahab-Hamada"><i class="fa fa-github" style="color: #fff" aria-hidden="true"></i></a>
                     <span>Abdelwahab-Hamada</span>
