--- a/adopet/templates/registration/signup.html
+++ b/adopet/templates/registration/signup.html
@@ -11,6 +11,7 @@
       {{ form }}
       <button type="submit">Sign Up</button>
     </form>
+    <a style="color: #f44566;" href="{% url 'login' %}">Already have an account?</a>
   </div>
 </div>
 {% endblock %}
