--- a/adopet/templates/registration/login.html
+++ b/adopet/templates/registration/login.html
@@ -11,6 +11,7 @@
       {{ form }}
       <button type="submit">Log In</button>
     </form>
+    <a style="color: #f44566;" href="{% url 'signup' %}">Don't have an account?</a>
   </div>
 </div>
 {% endblock %}
